[project]
name = "pdflinks"
version = "0.1.1"
description = "Check stalled links inside PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.23.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[tool.uv]
package = true

[project.scripts]
pdflinks = "pdflinks:main"
